package com.clt.matlink.modules.outBoundApply.mapper;

import com.clt.matlink.common.mybatis.mapper.BaseMapperPlus;
import com.clt.matlink.modules.outBoundApply.domain.entity.OutBoundApply;

public interface OutBoundApplyMapper extends BaseMapperPlus<OutBoundApply,OutBoundApply> {
}
