@startuml
skinparam classAttributeIconSize 0
interface OutBoundApplyMapper {
}
class OutBoundApplyServiceImpl {
+ save(OutBoundApply):OutBoundApply
+ getById(Long):OutBoundApply
+ getByIds(List<Long>):List<OutBoundApply>
+ deleteById(Long):Boolean
+ list(OutBoundApplyForm):List<OutBoundApply>
+ page(OutBoundApplyForm,PageQuery):PageInfo<OutBoundApplyVo>
+ batchSave(List<OutBoundApply>):List<OutBoundApply>
+ updateAuditStatus(MaterialAuditRelationParam):OutBoundApply
+ validateApplyNo(OutBoundApply):Boolean
}

class OutBoundApplyController {
+ create(OutBoundApply):OutBoundApply
+ update(OutBoundApply):OutBoundApply
+ batchUpdate(List<OutBoundApply>):List<OutBoundApply>
+ getById(Long):OutBoundApply
+ getByIds(List<Long>):List<OutBoundApply>
+ deleteById(Long):Void
+ list(OutBoundApplyForm):List<OutBoundApply>
+ page(OutBoundApplyForm,PageQuery):PageInfo<OutBoundApplyVo>
+ updateAuditStatus(MaterialAuditRelationParam):OutBoundApply
+ validateApplyNo(OutBoundApply):Boolean
}

interface AuditFlowRelationService{
+generateAuditFlowRelation():MaterialAuditRelationGenerateResult
+processAuditFlowRelation():MaterialAuditRelationResult
+listAuditBeingOrderIdsByCurrentUser():List<Long>
}
interface OutBoundApplyService {
+ save(OutBoundApply):OutBoundApply
+ getById(Long):OutBoundApply
+ getByIds(List<Long>):List<OutBoundApply>
+ deleteById(Long):Boolean
+ list(OutBoundApplyForm):List<OutBoundApply>
+ page(OutBoundApplyForm,PageQuery):PageInfo<OutBoundApplyVo>
+ batchSave(List<OutBoundApply>):List<OutBoundApply>
+ updateAuditStatus(MaterialAuditRelationParam):OutBoundApply
+ validateApplyNo(OutBoundApply):Boolean
}



class OutBoundApply {
- Long id
- Long stockId
- String applyNo
- Date applyTime
- Long deptId
- Long applyUserId
- Integer auditStatus
- Integer status
- Long auditUserId
- Date auditTime
- String purpose
- Long createUserId
}
class BaseEntity {
- Date createTime
- Date updateTime
- Integer delFlag
}

OutBoundApplyController ..> OutBoundApplyService
OutBoundApplyController ..> OutBoundApply
OutBoundApplyService <|.. OutBoundApplyServiceImpl
BaseEntity <|-- OutBoundApply
OutBoundApplyServiceImpl ..> OutBoundApplyMapper
OutBoundApplyServiceImpl ..> OutBoundApply
OutBoundApplyServiceImpl ..> AuditFlowRelationService


@enduml